--- a/Soft/Views/Shared/_Delete.cshtml
+++ b/Soft/Views/Shared/_Delete.cshtml
@@ -17,6 +17,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="@ViewData[ViewDataStrings.ItemID]" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">@ViewData[CommonViewStrings.BackToList]</a>
     </form>
 </div>
