--- a/Soft/Views/Shared/_Details.cshtml
+++ b/Soft/Views/Shared/_Details.cshtml
@@ -1,5 +1,19 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using Contoso.Pages.Constants;
 @{
+    Layout = CommonViewStrings.Layout;
+    ViewData[ViewDataStrings.Title] = DetailsViewStrings.DetailsTitle;
 }
+
+<h1>@ViewData[ViewDataStrings.Caption]</h1>
+
+<div>
+    <h4>@ViewData[ViewDataStrings.Title]</h4>
+    <hr />
+    <dl class="row">
+        @RenderBody()
+    </dl>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@ViewData[ViewDataStrings.ItemID]">@ViewData[CommonViewStrings.Edit]</a>
+    <a asp-action="Index">@ViewData[CommonViewStrings.BackToList]</a>
+</div>
