--- a/Soft/Views/Departments/Index.cshtml
+++ b/Soft/Views/Departments/Index.cshtml
@@ -13,19 +13,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(m => m.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Budget)
+                @Html.DisplayNameFor(m => m.Budget)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StartDate)
+                @Html.DisplayNameFor(m => m.StartDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RowVersion)
+                @Html.DisplayNameFor(m => m.RowVersion)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Administrator)
+                @Html.DisplayNameFor(m => m.Administrator)
             </th>
             <th></th>
         </tr>
