--- a/Soft/Views/Courses/Details.cshtml
+++ b/Soft/Views/Courses/Details.cshtml
@@ -1,42 +1,9 @@
-﻿@model             Course
+﻿@model Course
 
 @{
-    ViewData["Title"] = "Details";
+	Layout = "_Details";
+	ViewData["Caption"] = "Course";
+	ViewData["ItemID"] = Model.CourseID;
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Course</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseID)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CourseID)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Credits)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Credits)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Department)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Department.Name)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.CourseID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<partial name="_ViewCourse" model="@Model" />
