--- a/Soft/Views/Courses/_ViewCourse.cshtml
+++ b/Soft/Views/Courses/_ViewCourse.cshtml
@@ -1,12 +1,13 @@
 ﻿@using Contoso.Pages.HtmlHelpers;
 @model Course
 
+@Html.ViewerFor(x => x.CourseID)
 @Html.ViewerFor(x => x.Title)
 @Html.ViewerFor(x => x.Credits)
 
 <dt class="col-sm-2">
 	@Html.DisplayNameFor(model => model.Department)
 </dt>
-<dt class="col-sm-10">
+<dd class="col-sm-10">
 	@Html.DisplayFor(model => model.Department.Name)
-</dt>
+</dd>
