--- a/Soft/Views/Departments/Details.cshtml
+++ b/Soft/Views/Departments/Details.cshtml
@@ -1,42 +1,16 @@
-﻿@model             Department
+﻿@model Department
 
 @{
-    ViewData["Title"] = "Details";
+	Layout = "_Details";
+	ViewData["Caption"] = "Department";
+	ViewData["ItemID"] = Model.DepartmentID;
 }
 
-<h2>Details</h2>
+<partial name="_ViewCourse" model="@Model" />
 
-<div>
-    <h4>Department</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Budget)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Budget)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Administrator)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Administrator.FullName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.DepartmentID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<dt class="col-sm-2">
+	@Html.DisplayNameFor(m => m.Administrator)
+</dt>
+<dd class="col-sm-10">
+	@Html.DisplayFor(m => m.Administrator.FullName)
+</dd>
