--- a/Soft/Views/Instructors/Details.cshtml
+++ b/Soft/Views/Instructors/Details.cshtml
@@ -1,36 +1,10 @@
-﻿@model Contoso.Domain.Instructor
+﻿@model Instructor
 
 @{
-    ViewData["Title"] = "Details";
+	Layout = "_Details";
+	ViewData["Caption"] = "Instructor";
+	ViewData["ItemID"] = Model.ID;
 }
 
-<h1>Details</h1>
+<partial name="_ViewCourse" model="@Model" />
 
-<div>
-    <h4>Instructor</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstMidName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstMidName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HireDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HireDate)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
