--- a/Soft/Views/Students/Details.cshtml
+++ b/Soft/Views/Students/Details.cshtml
@@ -1,35 +1,15 @@
-﻿@model Contoso.Domain.Student
+﻿@model Student
 
 @{
-	ViewData["Title"] = "Details";
+	Layout = "_Details";
+	ViewData["Caption"] = "Student";
+	ViewData["ItemID"] = Model.ID;
 }
 
-<h1>Details</h1>
+<partial name="_ViewCourse" model="@Model" />
 
-<div>
-	<h4>Student</h4>
-	<hr />
-	<dl class="row">
-		<dt class = "col-sm-2">
-			@Html.DisplayNameFor(model => model.LastName)
-		</dt>
-		<dd class = "col-sm-10">
-			@Html.DisplayFor(model => model.LastName)
-		</dd>
-		<dt class = "col-sm-2">
-			@Html.DisplayNameFor(model => model.FirstMidName)
-		</dt>
-		<dd class = "col-sm-10">
-			@Html.DisplayFor(model => model.FirstMidName)
-		</dd>
-		<dt class = "col-sm-2">
-			@Html.DisplayNameFor(model => model.EnrollmentDate)
-		</dt>
-		<dd class = "col-sm-10">
-			@Html.DisplayFor(model => model.EnrollmentDate)
-		</dd>
-		<dt class="col-sm-2">
-			@Html.DisplayNameFor(model => model.Enrollments)
+<dt class="col-sm-2">
+	@Html.DisplayNameFor(m => m.Enrollments)
 </dt>
 <dd class="col-sm-10">
 	<table class="table">
@@ -37,22 +17,17 @@
 			<th>Course Title</th>
 			<th>Grade</th>
 		</tr>
-				@foreach (var item in Model.Enrollments)
-				{
-					<tr>
-						<td>
-							@Html.DisplayFor(modelItem => item.Course.Title)
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.Grade)
-						</td>
-					</tr>
-				}
+		@foreach (var item in Model.Enrollments)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Course.Title)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Grade)
+				</td>
+			</tr>
+		}
 	</table>
 </dd>
-	</dl>
-</div>
-<div>
-	<a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-	<a asp-action="Index">Back to List</a>
-</div>
+
