--- a/Soft/Views/Instructors/_ViewCourse.cshtml
+++ b/Soft/Views/Instructors/_ViewCourse.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Contoso.Pages.HtmlHelpers;
 @model Instructor
 
-@*@Html.ViewerFor(x => x.LastName)
-*@@Html.ViewerFor(x => x.FirstMidName)
+@Html.ViewerFor(x => x.LastName)
+@Html.ViewerFor(x => x.FirstMidName)
 @Html.ViewerFor(x => x.HireDate)
-@Html.ViewerFor(x => x.OfficeAssignment.Location)
