--- a/Soft/Views/Shared/_Edit.cshtml
+++ b/Soft/Views/Shared/_Edit.cshtml
@@ -1,28 +1,27 @@
-﻿@using Contoso.Pages.Constants;
+﻿@using Contoso.Pages.Constants
 @{
-    Layout = CommonViewStrings.Layout;
-    ViewData[ViewDataStrings.Title] = EditViewStrings.EditTitle;
+    Layout = Layouts.Default;
 }
 
-<h1>@ViewData[ViewDataStrings.Title]</h1>
+<h1>@ViewData[Data.Title]</h1>
 
-<h4>@ViewData[ViewDataStrings.Caption]</h4>
+<h3>@Texts.Edit</h3>
+
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @RenderBody()
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index">@ViewData[CommonViewStrings.BackToList]</a>
-</div>
+<form asp-action="Edit">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+    <dl class="row">
+        @RenderBody()
+    </dl>
+
+    <div class="form-group">
+        <input type="submit" value="@Texts.Save" class="btn btn-primary" /> |
+        <a asp-action="Index">@Texts.BackToList</a>
+    </div>
+
+</form>
 
 @section Scripts {
     @{
