--- a/Soft/Views/Courses/Delete.cshtml
+++ b/Soft/Views/Courses/Delete.cshtml
@@ -1,9 +1,13 @@
 ﻿@model Course
+@using Contoso.Pages.Constants
+@using Contoso.Pages.HtmlHelpers
 
 @{
-	Layout = "_Delete";
-	ViewData["Caption"] = "Course";
-	ViewData["ItemID"] = Model.CourseID;
+    ViewData[Data.Title] = nameof(Course);
+    ViewData[Data.ItemID] = Model.ID;
+    Layout = Layouts.Delete;
 }
+
+@Html.ViewItem(x => x.ID)
 
 <partial name="_ViewCourse" model="@Model" />
