--- a/Soft/Views/Courses/Details.cshtml
+++ b/Soft/Views/Courses/Details.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Course
+@using Contoso.Pages.Constants
 
 @{
-	Layout = "_Details";
-	ViewData["Caption"] = "Course";
-	ViewData["ItemID"] = Model.CourseID;
+    ViewData[Data.Title] = nameof(Course);
+    ViewData[Data.ItemID] = Model.ID;
+    Layout = Layouts.Details;
 }
 
 <partial name="_ViewCourse" model="@Model" />
