--- a/Soft/Views/Courses/Edit.cshtml
+++ b/Soft/Views/Courses/Edit.cshtml
@@ -1,14 +1,13 @@
 ﻿@model Course
+@using Contoso.Pages.Constants
+@using Contoso.Pages.HtmlHelpers
 
 @{
-	Layout = "_Edit";
-	ViewData["Caption"] = "Course";
+    ViewData[Data.Title] = nameof(Course);
+    ViewData[Data.ItemID] = Model.ID;
+    Layout = Layouts.Edit;
 }
-
-<input type="hidden" asp-for="CourseID" />
-<div class="form-group">
-	<label asp-for="CourseID" class="control-label"></label>
-	<div>@Html.DisplayFor(model => model.CourseID)</div>
-</div>
+<input type="hidden" asp-for="ID" />
+@Html.ViewItem(x => x.ID)
 
 <partial name="_EditCourse" model="@Model" />
