--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -1,13 +1,10 @@
-﻿@using Contoso.Pages.HtmlHelpers
-@model Course
+﻿@model Course
+@using Contoso.Pages.HtmlHelpers
 
-@Html.ControllerFor(x => x.Title)
-@Html.ControllerFor(x => x.Credits)
+@{
+    var items = (IEnumerable<SelectListItem>)ViewBag.DepartmentId;
+}
 
-<div class="form-group">
-	<label asp-for="Department" class="control-label"></label>
-	<select asp-for="Department" class="form-control" asp-items="ViewBag.DepartmentID">
-		<option value="">-- Select Department --</option>
-	</select>
-	<span asp-validation-for="DepartmentID" class="text-danger" />
-</div>
+@Html.EditItem(x => x.Title)
+@Html.EditItem(x => x.Credits)
+@Html.SelectItem(x => x.DepartmentID, items, x => x.Department)
