--- a/Soft/Views/Departments/Details.cshtml
+++ b/Soft/Views/Departments/Details.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Department
-
+@using Contoso.Pages.Constants;
 @{
-	Layout = "_Details";
-	ViewData["Caption"] = "Department";
-	ViewData["ItemID"] = Model.DepartmentID;
+	ViewData[Data.Title] = nameof(Department);
+	ViewData[Data.ItemID] = Model.ID;
+	Layout = Layouts.Details;
 }
 
 <partial name="_ViewCourse" model="@Model" />
