--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -2,7 +2,7 @@
 @using Contoso.Pages.HtmlHelpers
 
 @{
-    var items = (IEnumerable<SelectListItem>)ViewBag.DepartmentId;
+    var items = (IEnumerable<SelectListItem>)ViewBag.DepartmentID;
 }
 
 @Html.EditItem(x => x.Title)
