--- a/Soft/Views/Home/About.cshtml
+++ b/Soft/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<Contoso.Facade.EnrollmentDateGroup>
+﻿@using Contoso.Pages.Constants;
+@model IEnumerable<Contoso.Facade.EnrollmentDateGroup>
 
 @{
-    ViewData["Title"] = "Student Body Statistics";
+    ViewData[Data.Title] = "Student Body Statistics";
 }
 
 <h2>Student Body Statistics</h2>
