--- a/Soft/Views/Instructors/Edit.cshtml
+++ b/Soft/Views/Instructors/Edit.cshtml
@@ -1,8 +1,10 @@
-﻿@model Instructor
+﻿@using Contoso.Pages.Constants;
+@model Instructor
 
 @{
-     Layout = "_Edit";
-     ViewData["Caption"] = "Instructor";
+    ViewData[Data.Title] = nameof(Instructor);
+    ViewData[Data.ItemID] = Model.ID;
+    Layout = Layouts.Edit;
 }
 
 <partial name="_EditCourse" model="@Model" />
