--- a/Soft/Views/Instructors/_EditInstructors.cshtml
+++ b/Soft/Views/Instructors/_EditInstructors.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Contoso.Pages.HtmlHelpers
 @model Instructor
 
-@Html.ControllerFor(x => x.LastName)
-@Html.ControllerFor(x => x.FirstMidName)
-@Html.ControllerFor(x => x.HireDate)
-@Html.ControllerFor(x => x.OfficeAssignment.Location)
+@Html.EditItem(x => x.LastName)
+@Html.EditItem(x => x.FirstMidName)
+@Html.EditItem(x => x.HireDate)
+@Html.EditItem(x => x.OfficeAssignment.Location)
 
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
