--- a/Soft/Views/Courses/Details.cshtml
+++ b/Soft/Views/Courses/Details.cshtml
@@ -1,5 +1,5 @@
-﻿@model Course
-@using Contoso.Pages.Constants
+﻿@using Contoso.Pages.Constants
+@model Course
 
 @{
     ViewData[Data.Title] = nameof(Course);
