--- a/Soft/Views/Instructors/Details.cshtml
+++ b/Soft/Views/Instructors/Details.cshtml
@@ -7,5 +7,5 @@
     Layout = Layouts.Details;
 }
 
-<partial name="_ViewCourse" model="@Model" />
+<partial name="_ViewInstructors" model="@Model" />
 
