--- a/Soft/Views/Students/Details.cshtml
+++ b/Soft/Views/Students/Details.cshtml
@@ -1,12 +1,13 @@
-﻿@model Student
+﻿@using Contoso.Pages.Constants;
+@model Student
 
 @{
-	Layout = "_Details";
-	ViewData["Caption"] = "Student";
-	ViewData["ItemID"] = Model.ID;
+	ViewData[Data.Title] = nameof(Student);
+	ViewData[Data.ItemID] = Model.ID;
+	Layout = Layouts.Details;
 }
 
-<partial name="_ViewCourse" model="@Model" />
+<partial name="_ViewStudents" model="@Model" />
 
 <dt class="col-sm-2">
 	@Html.DisplayNameFor(m => m.Enrollments)
