--- a/Soft/Views/Courses/Delete.cshtml
+++ b/Soft/Views/Courses/Delete.cshtml
@@ -1,6 +1,6 @@
-﻿@model Course
-@using Contoso.Pages.Constants
+﻿@using Contoso.Pages.Constants
 @using Contoso.Pages.HtmlHelpers
+@model Course
 
 @{
     ViewData[Data.Title] = nameof(Course);
