--- a/Soft/Views/Courses/Index.cshtml
+++ b/Soft/Views/Courses/Index.cshtml
@@ -6,14 +6,14 @@
 @{
     ViewData[Data.Title] = "Courses";
     var columns = new Dictionary<string, Expression<Func<Course, dynamic>>>{
-        //{nameof(Course.ID), x => x.ID },
-        //{nameof(Course.Title),x => x.Title },
-        //{nameof(Course.Credits),x => x.Credits },
+        {nameof(Course.ID), x => x.ID },
+        {nameof(Course.Title),x => x.Title },
+        {nameof(Course.Credits),x => x.Credits },
         {nameof(Course.Department),x => x.Department.Name} };
     dynamic getId(Course c) => c.ID;
 }
 
-<h1>Index</h1>
+<h1>Courses</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
