--- a/Soft/Views/Courses/_ViewCourse.cshtml
+++ b/Soft/Views/Courses/_ViewCourse.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Course
 @using Contoso.Pages.HtmlHelpers;
 
+@Html.ViewItem(x => x.ID)
 @Html.ViewItem(x => x.Title)
 @Html.ViewItem(x => x.Credits)
 @Html.ViewItem(x => x.Department.Name, x => x.Department)
