--- a/Soft/Views/Instructors/Create.cshtml
+++ b/Soft/Views/Instructors/Create.cshtml
@@ -6,4 +6,4 @@
     Layout = Layouts.Create;
 }
 
-<partial name="_EditCourse" model="@Model" />
+<partial name="_EditInstructors" model="@Model" />
