--- a/Soft/Views/Instructors/Delete.cshtml
+++ b/Soft/Views/Instructors/Delete.cshtml
@@ -7,4 +7,4 @@
     Layout = Layouts.Delete;
 }
 
-<partial name="_ViewCourse" model="@Model" />
+<partial name="_ViewInstructors" model="@Model" />
