--- a/Soft/Views/Students/Edit.cshtml
+++ b/Soft/Views/Students/Edit.cshtml
@@ -1,10 +1,11 @@
-﻿@model Student
+﻿@using Contoso.Pages.Constants;
+@model Student
 
 @{
-	Layout = "_Edit";
-	ViewData["Caption"] = "Student";
+    ViewData[Data.Title] = nameof(Student);
+    Layout = Layouts.Edit;
 }
 
 <input type="hidden" asp-for="ID" />
 
-<partial name="_EditCourse" model="@Model" />
+<partial name="_EditStudents" model="@Model" />
