--- a/Soft/Views/Courses/Index.cshtml
+++ b/Soft/Views/Courses/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<Course>
-@using Contoso.Pages.HtmlHelpers
+﻿@using Contoso.Pages.HtmlHelpers
 @using Contoso.Pages.Constants
 @using System.Linq.Expressions;
+@model IEnumerable<Course>
 
 @{
     ViewData[Data.Title] = "Courses";
