--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -2,10 +2,10 @@
 @model Course
 
 @{
-    var items = (IEnumerable<SelectListItem>)ViewBag.Department.ID;
+    var items = (IEnumerable<SelectListItem>)ViewBag.DepartmentID;
 }
 
 @Html.EditItem(x => x.ID)
 @Html.EditItem(x => x.Title)
 @Html.EditItem(x => x.Credits)
-@Html.SelectItem(x => x.Department.ID, items, x => x.Department)
+@Html.SelectItem(x => x.DepartmentID, items, x => x.Department)
