--- a/Soft/Views/Departments/Index.cshtml
+++ b/Soft/Views/Departments/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@model IEnumerable<Department>
+﻿@using Contoso.Pages.HtmlHelpers
 @using Contoso.Pages.Constants
+@using System.Linq.Expressions;
+@model IEnumerable<Department>
 
 @{
     ViewData[Data.Title] = "Departments";
+    var columns = new Dictionary<string, Expression<Func<Department, dynamic>>>{
+        {nameof(Department.Name), x => x.Name },
+        {nameof(Department.Budget),x => x.Budget },
+        {nameof(Department.StartDate),x => x.StartDate },
+        {nameof(Department.RowVersion),x => x.RowVersion },
+        {nameof(Department.Administrator),x => x.Administrator.FullName } };
+    dynamic getId(Department d) => d.ID;
 }
 
 <h2>Departments</h2>
@@ -10,51 +19,5 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(m => m.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(m => m.Budget)
-            </th>
-            <th>
-                @Html.DisplayNameFor(m => m.StartDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(m => m.RowVersion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(m => m.Administrator)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Budget)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RowVersion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Administrator.FullName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+@Html.ViewList(Model, columns, getId)
