--- a/Soft/Views/Home/About.cshtml
+++ b/Soft/Views/Home/About.cshtml
@@ -10,7 +10,7 @@
 <table>
     <tr>
         <th>
-            Enrollment Date
+            Enrollment Date |
         </th>
         <th>
             Students
