--- a/Soft/Views/Departments/Create.cshtml
+++ b/Soft/Views/Departments/Create.cshtml
@@ -1,6 +1,6 @@
-﻿@model Department
-@using Contoso.Pages.Constants
+﻿@using Contoso.Pages.Constants
 @using Contoso.Pages.HtmlHelpers
+@model Department
 
 @{
 	ViewData[Data.Title] = nameof(Department);
@@ -8,10 +8,3 @@
 }
 
 <partial name="_EditDepartments" model="@Model" />
-
-<div class="form-group">
-	<label asp-for="InstructorID" class="control-label"></label>
-	<select asp-for="InstructorID" class="form-control" asp-items="ViewBag.InstructorID">
-		<option value="">-- Select Administrator --</option>
-	</select>
-</div>
