--- a/Soft/Views/Departments/Delete.cshtml
+++ b/Soft/Views/Departments/Delete.cshtml
@@ -1,6 +1,6 @@
-﻿@model Department
-@using Contoso.Pages.Constants
+﻿@using Contoso.Pages.Constants
 @using Contoso.Pages.HtmlHelpers
+@model Department
 
 @{
 	ViewData[Data.Title] = nameof(Department);
@@ -9,16 +9,3 @@
 }
 
 <partial name="_ViewDepartments" model="@Model" />
-
-<dt class="col-sm-2">
-	@Html.DisplayNameFor(m => m.RowVersion)
-</dt>
-<dd class="col-sm-10">
-	@Html.DisplayFor(m => m.RowVersion)
-</dd>
-<dt class="col-sm-2">
-	@Html.DisplayNameFor(m => m.Administrator)
-</dt>
-<dd class="col-sm-10">
-	@Html.DisplayFor(m => m.Administrator.FullName)
-</dd>
