--- a/Soft/Views/Departments/Details.cshtml
+++ b/Soft/Views/Departments/Details.cshtml
@@ -1,16 +1,10 @@
-﻿@model Department
-@using Contoso.Pages.Constants;
+﻿@using Contoso.Pages.Constants;
+@model Department
+
 @{
 	ViewData[Data.Title] = nameof(Department);
 	ViewData[Data.ItemID] = Model.ID;
 	Layout = Layouts.Details;
 }
 
-<partial name="_ViewCourse" model="@Model" />
-
-<dt class="col-sm-2">
-	@Html.DisplayNameFor(m => m.Administrator)
-</dt>
-<dd class="col-sm-10">
-	@Html.DisplayFor(m => m.Administrator.FullName)
-</dd>
+<partial name="_ViewDepartments" model="@Model" />
