--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -6,6 +6,6 @@
 }
 
 @Html.EditItem(x => x.ID)
-@Html.EditItem(x => x.Title)
+@Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.Credits)
 @Html.SelectItem(x => x.DepartmentID, items, x => x.Department)
