--- a/Soft/Views/Instructors/_EditInstructors.cshtml
+++ b/Soft/Views/Instructors/_EditInstructors.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Contoso.Pages.HtmlHelpers
 @model Instructor
 
-@Html.EditItem(x => x.LastName)
+@Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.FirstMidName)
 @Html.EditItem(x => x.HireDate)
 @Html.EditItem(x => x.OfficeAssignment.Location)
