--- a/Soft/Views/Students/Details.cshtml
+++ b/Soft/Views/Students/Details.cshtml
@@ -22,7 +22,7 @@
 		{
 			<tr>
 				<td>
-					@Html.DisplayFor(modelItem => item.Course.Title)
+					@Html.DisplayFor(modelItem => item.Course.Name)
 				</td>
 				<td>
 					@Html.DisplayFor(modelItem => item.Grade)
