--- a/Soft/Views/Students/Index.cshtml
+++ b/Soft/Views/Students/Index.cshtml
@@ -37,7 +37,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstMidName)
