--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -5,7 +5,7 @@
     var items = (IEnumerable<SelectListItem>)ViewBag.DepartmentID;
 }
 
-@Html.EditItem(x => x.ID)
+@Html.EditItem(x => x.Number)
 @Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.Credits)
 @Html.SelectItem(x => x.DepartmentID, items, x => x.Department)
