--- a/Soft/Views/Courses/Index.cshtml
+++ b/Soft/Views/Courses/Index.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewData[Data.Title] = "Courses";
     var columns = new Dictionary<string, Expression<Func<Course, dynamic>>>{
-        {nameof(Course.ID), x => x.ID },
+        {nameof(Course.Number), x => x.Number },
         {nameof(Course.Name),x => x.Name },
         {nameof(Course.Credits),x => x.Credits },
         {nameof(Course.Department),x => x.Department.Name} };
