try-catch refactoring

--- a/Soft/Views/Departments/_EditDepartments.cshtml
+++ b/Soft/Views/Departments/_EditDepartments.cshtml
@@ -8,4 +8,4 @@
 @Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.Budget)
 @Html.EditItem(x => x.StartDate)
-@Html.SelectItem(x => x.InstructorID, items, x => x.InstructorID)
+@Html.SelectItem(x => x.InstructorID, items, x => x.Administrator)
