Making Courses & Enrollments controllers abstract

--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -2,10 +2,10 @@
 @model Course
 
 @{
-    var items = (IEnumerable<SelectListItem>)ViewBag.DepartmentID;
+    var departments = (IEnumerable<SelectListItem>)ViewBag.Departments;
 }
 
 @Html.EditItem(x => x.Number)
 @Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.Credits)
-@Html.SelectItem(x => x.DepartmentID, items, x => x.Department)
+@Html.SelectItem(x => x.DepartmentID, departments, x => x.Department)
