--- a/Soft/Views/Shared/_Layout.cshtml
+++ b/Soft/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="Index">Departments</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Enrollments" asp-action="Index">Enrollments</a>
+                        </li>
                     </ul>
                 </div>
             </div>
