Making all controllers abstract (except Instructor)

--- a/Soft/Views/Courses/Create.cshtml
+++ b/Soft/Views/Courses/Create.cshtml
@@ -6,5 +6,5 @@
     ViewData[Data.Title] = nameof(Course);
     Layout = Layouts.Create;
 }
-
+@Html.EditItem(x => x.Number)
 <partial name="_EditCourse" model="@Model" />
