Cleaning Instructor controller

--- a/Soft/Views/Departments/Edit.cshtml
+++ b/Soft/Views/Departments/Edit.cshtml
@@ -8,6 +8,6 @@
 }
 
 <input type="hidden" asp-for="ID" />
-<input type="hidden" asp-for="RowVersion" />
-
+@*<input type="hidden" asp-for="RowVersion" />
+*@
 <partial name="_EditDepartments" model="@Model" />
