--- a/Soft/Views/Departments/_ViewDepartments.cshtml
+++ b/Soft/Views/Departments/_ViewDepartments.cshtml
@@ -4,5 +4,5 @@
 @Html.ViewItem(x => x.Name)
 @Html.ViewItem(x => x.Budget)
 @Html.ViewItem(x => x.StartDate)
-@Html.ViewItem(x => x.RowVersion)
-@Html.ViewItem(x => x.Administrator.FullName, x => x.Administrator)
+@*@Html.ViewItem(x => x.RowVersion)
+*@@Html.ViewItem(x => x.Administrator.FullName, x => x.Administrator)
